[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peach"
version = "0.1.0"
description = "Provider-agnostic terminal agent with streaming and agent bus"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "blessed>=1.20.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
peach = "peach.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["peach"]
